[gd_scene load_steps=5 format=3 uid="uid://bvvav2o0veqc6"]

[ext_resource type="Script" uid="uid://clvdmoxu4oya5" path="res://breaking_platform.gd" id="1_qpva8"]
[ext_resource type="Texture2D" uid="uid://bpvi3lfu530w" path="res://icon.svg" id="2_7v57b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvcmo"]
size = Vector2(137, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_woikg"]
size = Vector2(139, 36)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_qpva8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(60, 9)
scale = Vector2(1.078125, 0.265625)
texture = ExtResource("2_7v57b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58.5, 7)
shape = SubResource("RectangleShape2D_hvcmo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(58.5, 7)
shape = SubResource("RectangleShape2D_woikg")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
